--- a/apps/web/.svelte-kit/output/client/.vite/manifest.json
+++ b/apps/web/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.yAUSLiGx.js",
+    "file": "_app/immutable/entry/app.DRk7aloC.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -42,20 +42,20 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.Dej1C54B.js",
+    "file": "_app/immutable/nodes/0.BQiOAmnn.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_DsnmJJEf.js",
       "_d-9Q_JcI.js",
       "_CC47Dqnt.js",
       "_3oX9xRnt.js",
       "_CC5kzxMM.js",
       "_DLEGmHds.js",
-      "_oII9ccUj.js",
+      "_ICb-5blB.js",
       "_b6JBECFY.js",
       "_BSbMBcI1.js",
       "_BgZjGsrQ.js"
@@ -65,7 +65,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CbvTZAi5.js",
+    "file": "_app/immutable/nodes/1.BZ2q_7yQ.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -75,11 +75,11 @@
       "_69_IOA4Y.js",
       "_CC47Dqnt.js",
       "_6Z2O6PQy.js",
-      "_D9h6ojiU.js"
+      "_CHmzRBH6.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/10.js": {
-    "file": "_app/immutable/nodes/10.C911p039.js",
+    "file": "_app/immutable/nodes/10.Dmxrm7YG.js",
     "name": "nodes/10",
     "src": ".svelte-kit/generated/client-optimized/nodes/10.js",
     "isEntry": true,
@@ -91,7 +91,7 @@
       "_3oX9xRnt.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_uE9PL26s.js"
     ]
   },
@@ -128,7 +128,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/13.js": {
-    "file": "_app/immutable/nodes/13.2M9owM2R.js",
+    "file": "_app/immutable/nodes/13.L7eMRvlL.js",
     "name": "nodes/13",
     "src": ".svelte-kit/generated/client-optimized/nodes/13.js",
     "isEntry": true,
@@ -167,7 +167,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/15.js": {
-    "file": "_app/immutable/nodes/15.zM7Kc7Q-.js",
+    "file": "_app/immutable/nodes/15.mLoPLGAy.js",
     "name": "nodes/15",
     "src": ".svelte-kit/generated/client-optimized/nodes/15.js",
     "isEntry": true,
@@ -181,13 +181,13 @@
       "_CdEA5IGF.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_D9h6ojiU.js",
-      "_oII9ccUj.js",
+      "_CHmzRBH6.js",
+      "_ICb-5blB.js",
       "_b6JBECFY.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/16.js": {
-    "file": "_app/immutable/nodes/16.-ucxsWac.js",
+    "file": "_app/immutable/nodes/16.CKcy1LqW.js",
     "name": "nodes/16",
     "src": ".svelte-kit/generated/client-optimized/nodes/16.js",
     "isEntry": true,
@@ -203,13 +203,13 @@
       "_CdEA5IGF.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_D9h6ojiU.js",
-      "_oII9ccUj.js",
+      "_CHmzRBH6.js",
+      "_ICb-5blB.js",
       "_b6JBECFY.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/17.js": {
-    "file": "_app/immutable/nodes/17.bSCD04Q5.js",
+    "file": "_app/immutable/nodes/17.C6zXJf45.js",
     "name": "nodes/17",
     "src": ".svelte-kit/generated/client-optimized/nodes/17.js",
     "isEntry": true,
@@ -224,8 +224,8 @@
       "_CdEA5IGF.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_oII9ccUj.js",
-      "_D9h6ojiU.js",
+      "_ICb-5blB.js",
+      "_CHmzRBH6.js",
       "_9ek7rKyT.js",
       "_Er5ah5RK.js",
       "_BmFDec73.js",
@@ -237,7 +237,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/18.js": {
-    "file": "_app/immutable/nodes/18.CJlvBxFI.js",
+    "file": "_app/immutable/nodes/18.DYRTU5rU.js",
     "name": "nodes/18",
     "src": ".svelte-kit/generated/client-optimized/nodes/18.js",
     "isEntry": true,
@@ -254,12 +254,12 @@
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
       "_b6JBECFY.js",
-      "_D9h6ojiU.js",
-      "_Ci5m7kXN.js"
+      "_CHmzRBH6.js",
+      "_B__jQMK_.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/19.js": {
-    "file": "_app/immutable/nodes/19.BCO-tK56.js",
+    "file": "_app/immutable/nodes/19.DFQmL_Zn.js",
     "name": "nodes/19",
     "src": ".svelte-kit/generated/client-optimized/nodes/19.js",
     "isEntry": true,
@@ -275,12 +275,12 @@
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
       "_b6JBECFY.js",
-      "_D9h6ojiU.js",
-      "_Ci5m7kXN.js"
+      "_CHmzRBH6.js",
+      "_B__jQMK_.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.B4oaWbf1.js",
+    "file": "_app/immutable/nodes/2.CPTSZVtE.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -294,9 +294,9 @@
       "_Codb343D.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_oII9ccUj.js",
+      "_ICb-5blB.js",
       "_uE9PL26s.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_Bar9hDmN.js",
       "_BmFDec73.js",
       "_CC5kzxMM.js",
@@ -308,7 +308,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/20.js": {
-    "file": "_app/immutable/nodes/20.Bb1ID-du.js",
+    "file": "_app/immutable/nodes/20.FwSbSKWB.js",
     "name": "nodes/20",
     "src": ".svelte-kit/generated/client-optimized/nodes/20.js",
     "isEntry": true,
@@ -321,12 +321,12 @@
       "_B7k7sdk9.js",
       "_CC5kzxMM.js",
       "_DLEGmHds.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_b6JBECFY.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/21.js": {
-    "file": "_app/immutable/nodes/21.DEyM8qeg.js",
+    "file": "_app/immutable/nodes/21.D6esoFGO.js",
     "name": "nodes/21",
     "src": ".svelte-kit/generated/client-optimized/nodes/21.js",
     "isEntry": true,
@@ -342,12 +342,12 @@
       "_CC5kzxMM.js",
       "_6Z2O6PQy.js",
       "_b6JBECFY.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_BSbMBcI1.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/22.js": {
-    "file": "_app/immutable/nodes/22.LJ0tCxGF.js",
+    "file": "_app/immutable/nodes/22.Dv-iqaHn.js",
     "name": "nodes/22",
     "src": ".svelte-kit/generated/client-optimized/nodes/22.js",
     "isEntry": true,
@@ -365,7 +365,7 @@
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
       "_b6JBECFY.js",
-      "_D9h6ojiU.js"
+      "_CHmzRBH6.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/23.js": {
@@ -390,7 +390,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/24.js": {
-    "file": "_app/immutable/nodes/24.DqXa6H7g.js",
+    "file": "_app/immutable/nodes/24.yuoP85RD.js",
     "name": "nodes/24",
     "src": ".svelte-kit/generated/client-optimized/nodes/24.js",
     "isEntry": true,
@@ -406,15 +406,15 @@
       "_CC5kzxMM.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_oII9ccUj.js",
-      "_D9h6ojiU.js",
+      "_ICb-5blB.js",
+      "_CHmzRBH6.js",
       "_b6JBECFY.js",
       "_BSbMBcI1.js",
-      "_Ci5m7kXN.js"
+      "_B__jQMK_.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/25.js": {
-    "file": "_app/immutable/nodes/25.Cgula0k-.js",
+    "file": "_app/immutable/nodes/25.BFGzZ2_U.js",
     "name": "nodes/25",
     "src": ".svelte-kit/generated/client-optimized/nodes/25.js",
     "isEntry": true,
@@ -431,11 +431,11 @@
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
       "_b6JBECFY.js",
-      "_D9h6ojiU.js"
+      "_CHmzRBH6.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.DAz_rDts.js",
+    "file": "_app/immutable/nodes/3.CQmTs9Cl.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -447,12 +447,12 @@
       "_CC47Dqnt.js",
       "_Codb343D.js",
       "_6Z2O6PQy.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_b6JBECFY.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.D17f-ACx.js",
+    "file": "_app/immutable/nodes/4.C2u0Tzy8.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -463,14 +463,14 @@
       "_Bar9hDmN.js",
       "_B7k7sdk9.js",
       "_DLEGmHds.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_b6JBECFY.js",
       "_BSbMBcI1.js",
       "_BgZjGsrQ.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.BNkTEpS8.js",
+    "file": "_app/immutable/nodes/5.CD6CGPkE.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -487,11 +487,11 @@
       "_DLEGmHds.js",
       "_BKS5pudM.js",
       "_uE9PL26s.js",
-      "_D9h6ojiU.js"
+      "_CHmzRBH6.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.BqLJQuLO.js",
+    "file": "_app/immutable/nodes/6.D-Lf_KrY.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -509,12 +509,12 @@
       "_DLEGmHds.js",
       "_uE9PL26s.js",
       "_Cj4IhdOJ.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_BKS5pudM.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.BxcmKmWm.js",
+    "file": "_app/immutable/nodes/7.BAYDNr0B.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
@@ -530,12 +530,12 @@
       "_CdEA5IGF.js",
       "_6Z2O6PQy.js",
       "_DLEGmHds.js",
-      "_D9h6ojiU.js",
+      "_CHmzRBH6.js",
       "_uE9PL26s.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/8.js": {
-    "file": "_app/immutable/nodes/8.lRefNVJl.js",
+    "file": "_app/immutable/nodes/8.Ct2UYBHm.js",
     "name": "nodes/8",
     "src": ".svelte-kit/generated/client-optimized/nodes/8.js",
     "isEntry": true,
@@ -634,6 +634,25 @@
       "_C3K3qoHi.js"
     ]
   },
+  "_B__jQMK_.js": {
+    "file": "_app/immutable/chunks/B__jQMK_.js",
+    "name": "LoginModal",
+    "imports": [
+      "_DsnmJJEf.js",
+      "_69_IOA4Y.js",
+      "_d-9Q_JcI.js",
+      "_CC47Dqnt.js",
+      "_3oX9xRnt.js",
+      "_CdEA5IGF.js",
+      "_6Z2O6PQy.js",
+      "_DDDij7Xt.js",
+      "_CAA_fk_i.js",
+      "_CHmzRBH6.js"
+    ],
+    "css": [
+      "_app/immutable/assets/LoginModal.BolWeU3G.css"
+    ]
+  },
   "_Bar9hDmN.js": {
     "file": "_app/immutable/chunks/Bar9hDmN.js",
     "name": "each",
@@ -692,28 +711,18 @@
       "_CC47Dqnt.js"
     ]
   },
+  "_CHmzRBH6.js": {
+    "file": "_app/immutable/chunks/CHmzRBH6.js",
+    "name": "entry",
+    "imports": [
+      "_d-9Q_JcI.js",
+      "_C3K3qoHi.js",
+      "_CC47Dqnt.js"
+    ]
+  },
   "_CdEA5IGF.js": {
     "file": "_app/immutable/chunks/CdEA5IGF.js",
     "name": "event-modifiers"
-  },
-  "_Ci5m7kXN.js": {
-    "file": "_app/immutable/chunks/Ci5m7kXN.js",
-    "name": "LoginModal",
-    "imports": [
-      "_DsnmJJEf.js",
-      "_69_IOA4Y.js",
-      "_d-9Q_JcI.js",
-      "_CC47Dqnt.js",
-      "_3oX9xRnt.js",
-      "_CdEA5IGF.js",
-      "_6Z2O6PQy.js",
-      "_DDDij7Xt.js",
-      "_CAA_fk_i.js",
-      "_D9h6ojiU.js"
-    ],
-    "css": [
-      "_app/immutable/assets/LoginModal.BolWeU3G.css"
-    ]
   },
   "_Cj4IhdOJ.js": {
     "file": "_app/immutable/chunks/Cj4IhdOJ.js",
@@ -729,15 +738,6 @@
   "_D9Z9MdNV.js": {
     "file": "_app/immutable/chunks/D9Z9MdNV.js",
     "name": "preload-helper"
-  },
-  "_D9h6ojiU.js": {
-    "file": "_app/immutable/chunks/D9h6ojiU.js",
-    "name": "entry",
-    "imports": [
-      "_d-9Q_JcI.js",
-      "_C3K3qoHi.js",
-      "_CC47Dqnt.js"
-    ]
   },
   "_DDDij7Xt.js": {
     "file": "_app/immutable/chunks/DDDij7Xt.js",
@@ -778,6 +778,13 @@
       "_B-dksMZM.js"
     ]
   },
+  "_ICb-5blB.js": {
+    "file": "_app/immutable/chunks/ICb-5blB.js",
+    "name": "stores",
+    "imports": [
+      "_CHmzRBH6.js"
+    ]
+  },
   "_LoginModal.BolWeU3G.css": {
     "file": "_app/immutable/assets/LoginModal.BolWeU3G.css",
     "src": "_LoginModal.BolWeU3G.css"
@@ -798,13 +805,6 @@
       "_DIeogL5L.js"
     ]
   },
-  "_oII9ccUj.js": {
-    "file": "_app/immutable/chunks/oII9ccUj.js",
-    "name": "stores",
-    "imports": [
-      "_D9h6ojiU.js"
-    ]
-  },
   "_uE9PL26s.js": {
     "file": "_app/immutable/chunks/uE9PL26s.js",
     "name": "admin",
@@ -813,12 +813,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CfvrGKuE.js",
+    "file": "_app/immutable/entry/start.xPJt1MvE.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_D9h6ojiU.js"
+      "_CHmzRBH6.js"
     ]
   },
   "src/lib/i18n/locales/en.json": {
