--- a/apps/web/.svelte-kit/output/client/.vite/manifest.json
+++ b/apps/web/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.IGBOnPKA.js",
+    "file": "_app/immutable/entry/app.DLIF4ftW.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -33,20 +33,20 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.pW930DJo.js",
+    "file": "_app/immutable/nodes/0.cwxKu6Mm.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_DotlNnaL.js",
+      "_B1N5Esk_.js",
       "_DsnmJJEf.js",
       "_CeyqlY7M.js",
       "_BYwdtpf8.js",
       "_x2hlQoet.js",
       "_B-ZH1xP9.js",
       "_DZx-2HU6.js",
-      "_BdajqbiG.js",
+      "_byo8Uj9Z.js",
       "_CJJjtxOk.js",
       "_CBJPUhe-.js",
       "_BH1Je14V.js"
@@ -56,7 +56,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.C2nKtgT0.js",
+    "file": "_app/immutable/nodes/1.gzr7zHN1.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -65,11 +65,11 @@
       "_DsnmJJEf.js",
       "_DI_skYSc.js",
       "_BYwdtpf8.js",
-      "_DotlNnaL.js"
+      "_B1N5Esk_.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/10.js": {
-    "file": "_app/immutable/nodes/10.Dm3Xs_gY.js",
+    "file": "_app/immutable/nodes/10.Bk_7RW3K.js",
     "name": "nodes/10",
     "src": ".svelte-kit/generated/client-optimized/nodes/10.js",
     "isEntry": true,
@@ -84,12 +84,12 @@
       "_B-ZH1xP9.js",
       "_DZx-2HU6.js",
       "_CJJjtxOk.js",
-      "_DotlNnaL.js",
-      "_BJa9MqjN.js"
+      "_B1N5Esk_.js",
+      "_c4fjUjNM.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/11.js": {
-    "file": "_app/immutable/nodes/11.CzeQAaf7.js",
+    "file": "_app/immutable/nodes/11.QBxxtdZr.js",
     "name": "nodes/11",
     "src": ".svelte-kit/generated/client-optimized/nodes/11.js",
     "isEntry": true,
@@ -102,12 +102,12 @@
       "_CvlXDtoZ.js",
       "_B-ZH1xP9.js",
       "_DZx-2HU6.js",
-      "_DotlNnaL.js",
+      "_B1N5Esk_.js",
       "_CJJjtxOk.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/12.js": {
-    "file": "_app/immutable/nodes/12.A0P6xznh.js",
+    "file": "_app/immutable/nodes/12.RFxQYJF6.js",
     "name": "nodes/12",
     "src": ".svelte-kit/generated/client-optimized/nodes/12.js",
     "isEntry": true,
@@ -122,12 +122,12 @@
       "_Dfeduz-f.js",
       "_B-ZH1xP9.js",
       "_CJJjtxOk.js",
-      "_DotlNnaL.js",
+      "_B1N5Esk_.js",
       "_CBJPUhe-.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/13.js": {
-    "file": "_app/immutable/nodes/13.cf5rOEP0.js",
+    "file": "_app/immutable/nodes/13.D7CPil_z.js",
     "name": "nodes/13",
     "src": ".svelte-kit/generated/client-optimized/nodes/13.js",
     "isEntry": true,
@@ -144,7 +144,7 @@
       "_CdEA5IGF.js",
       "_DZx-2HU6.js",
       "_CJJjtxOk.js",
-      "_DotlNnaL.js"
+      "_B1N5Esk_.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/14.js": {
@@ -168,7 +168,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/15.js": {
-    "file": "_app/immutable/nodes/15.DatvwPOl.js",
+    "file": "_app/immutable/nodes/15.CLVXF39N.js",
     "name": "nodes/15",
     "src": ".svelte-kit/generated/client-optimized/nodes/15.js",
     "isEntry": true,
@@ -183,15 +183,15 @@
       "_Dfeduz-f.js",
       "_B-ZH1xP9.js",
       "_DZx-2HU6.js",
-      "_BdajqbiG.js",
-      "_DotlNnaL.js",
+      "_byo8Uj9Z.js",
+      "_B1N5Esk_.js",
       "_CJJjtxOk.js",
       "_CBJPUhe-.js",
-      "_BJa9MqjN.js"
+      "_c4fjUjNM.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/16.js": {
-    "file": "_app/immutable/nodes/16.CZFW3UC1.js",
+    "file": "_app/immutable/nodes/16.D9TivPRo.js",
     "name": "nodes/16",
     "src": ".svelte-kit/generated/client-optimized/nodes/16.js",
     "isEntry": true,
@@ -207,11 +207,11 @@
       "_B-ZH1xP9.js",
       "_DZx-2HU6.js",
       "_CJJjtxOk.js",
-      "_DotlNnaL.js"
+      "_B1N5Esk_.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.Dke4j_Zw.js",
+    "file": "_app/immutable/nodes/2.CNOj4eve.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -222,12 +222,12 @@
       "_CeyqlY7M.js",
       "_BYwdtpf8.js",
       "_BKmRBtqp.js",
-      "_DotlNnaL.js",
+      "_B1N5Esk_.js",
       "_CJJjtxOk.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.DPXNOgbM.js",
+    "file": "_app/immutable/nodes/3.C8Zx3nYg.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -238,7 +238,7 @@
       "_5yF2oE_f.js",
       "_CvlXDtoZ.js",
       "_DZx-2HU6.js",
-      "_DotlNnaL.js",
+      "_B1N5Esk_.js",
       "_CJJjtxOk.js",
       "_CBJPUhe-.js",
       "_BH1Je14V.js"
@@ -281,7 +281,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.uXg929Yt.js",
+    "file": "_app/immutable/nodes/6.zZiXvPst.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -294,13 +294,13 @@
       "_Dfeduz-f.js",
       "_CdEA5IGF.js",
       "_DZx-2HU6.js",
-      "_DotlNnaL.js",
-      "_BdajqbiG.js",
+      "_B1N5Esk_.js",
+      "_byo8Uj9Z.js",
       "_CJJjtxOk.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/7.js": {
-    "file": "_app/immutable/nodes/7.BkvrJrzS.js",
+    "file": "_app/immutable/nodes/7.B5Qd9q8E.js",
     "name": "nodes/7",
     "src": ".svelte-kit/generated/client-optimized/nodes/7.js",
     "isEntry": true,
@@ -315,13 +315,13 @@
       "_B-ZH1xP9.js",
       "_CdEA5IGF.js",
       "_DZx-2HU6.js",
-      "_DotlNnaL.js",
-      "_BdajqbiG.js",
+      "_B1N5Esk_.js",
+      "_byo8Uj9Z.js",
       "_CJJjtxOk.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/8.js": {
-    "file": "_app/immutable/nodes/8._Xr4M6XH.js",
+    "file": "_app/immutable/nodes/8.BnuNPzTM.js",
     "name": "nodes/8",
     "src": ".svelte-kit/generated/client-optimized/nodes/8.js",
     "isEntry": true,
@@ -335,8 +335,8 @@
       "_B-ZH1xP9.js",
       "_CdEA5IGF.js",
       "_DZx-2HU6.js",
-      "_BdajqbiG.js",
-      "_DotlNnaL.js",
+      "_byo8Uj9Z.js",
+      "_B1N5Esk_.js",
       "_9ek7rKyT.js",
       "_BKmRBtqp.js",
       "_Dfeduz-f.js",
@@ -349,7 +349,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/9.js": {
-    "file": "_app/immutable/nodes/9.Cok0lHZ7.js",
+    "file": "_app/immutable/nodes/9.B0oUY7hj.js",
     "name": "nodes/9",
     "src": ".svelte-kit/generated/client-optimized/nodes/9.js",
     "isEntry": true,
@@ -365,8 +365,8 @@
       "_B-ZH1xP9.js",
       "_DZx-2HU6.js",
       "_CJJjtxOk.js",
-      "_DotlNnaL.js",
-      "_BJa9MqjN.js"
+      "_B1N5Esk_.js",
+      "_c4fjUjNM.js"
     ]
   },
   "_5yF2oE_f.js": {
@@ -395,6 +395,15 @@
     "file": "_app/immutable/chunks/B-dksMZM.js",
     "name": "clsx"
   },
+  "_B1N5Esk_.js": {
+    "file": "_app/immutable/chunks/B1N5Esk_.js",
+    "name": "entry",
+    "imports": [
+      "_CeyqlY7M.js",
+      "_D4e3NgJS.js",
+      "_BYwdtpf8.js"
+    ]
+  },
   "_BH1Je14V.js": {
     "file": "_app/immutable/chunks/BH1Je14V.js",
     "name": "index",
@@ -407,24 +416,6 @@
       "src/lib/i18n/locales/nl.json"
     ]
   },
-  "_BJa9MqjN.js": {
-    "file": "_app/immutable/chunks/BJa9MqjN.js",
-    "name": "LoginModal",
-    "imports": [
-      "_DsnmJJEf.js",
-      "_DI_skYSc.js",
-      "_CeyqlY7M.js",
-      "_BYwdtpf8.js",
-      "_x2hlQoet.js",
-      "_CdEA5IGF.js",
-      "_BjlGIVXh.js",
-      "_BlWJXHQh.js",
-      "_DotlNnaL.js"
-    ],
-    "css": [
-      "_app/immutable/assets/LoginModal.BolWeU3G.css"
-    ]
-  },
   "_BKmRBtqp.js": {
     "file": "_app/immutable/chunks/BKmRBtqp.js",
     "name": "slot",
@@ -435,13 +426,6 @@
   "_BYwdtpf8.js": {
     "file": "_app/immutable/chunks/BYwdtpf8.js",
     "name": "render"
-  },
-  "_BdajqbiG.js": {
-    "file": "_app/immutable/chunks/BdajqbiG.js",
-    "name": "stores",
-    "imports": [
-      "_DotlNnaL.js"
-    ]
   },
   "_BjlGIVXh.js": {
     "file": "_app/immutable/chunks/BjlGIVXh.js",
@@ -525,15 +509,6 @@
       "_B-ZH1xP9.js"
     ]
   },
-  "_DotlNnaL.js": {
-    "file": "_app/immutable/chunks/DotlNnaL.js",
-    "name": "entry",
-    "imports": [
-      "_CeyqlY7M.js",
-      "_D4e3NgJS.js",
-      "_BYwdtpf8.js"
-    ]
-  },
   "_DsnmJJEf.js": {
     "file": "_app/immutable/chunks/DsnmJJEf.js",
     "name": "disclose-version"
@@ -541,6 +516,31 @@
   "_LoginModal.BolWeU3G.css": {
     "file": "_app/immutable/assets/LoginModal.BolWeU3G.css",
     "src": "_LoginModal.BolWeU3G.css"
+  },
+  "_byo8Uj9Z.js": {
+    "file": "_app/immutable/chunks/byo8Uj9Z.js",
+    "name": "stores",
+    "imports": [
+      "_B1N5Esk_.js"
+    ]
+  },
+  "_c4fjUjNM.js": {
+    "file": "_app/immutable/chunks/c4fjUjNM.js",
+    "name": "LoginModal",
+    "imports": [
+      "_DsnmJJEf.js",
+      "_DI_skYSc.js",
+      "_CeyqlY7M.js",
+      "_BYwdtpf8.js",
+      "_x2hlQoet.js",
+      "_CdEA5IGF.js",
+      "_BjlGIVXh.js",
+      "_BlWJXHQh.js",
+      "_B1N5Esk_.js"
+    ],
+    "css": [
+      "_app/immutable/assets/LoginModal.BolWeU3G.css"
+    ]
   },
   "_x2hlQoet.js": {
     "file": "_app/immutable/chunks/x2hlQoet.js",
@@ -550,12 +550,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.b4SDu9oh.js",
+    "file": "_app/immutable/entry/start.7MLCVo-l.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_DotlNnaL.js"
+      "_B1N5Esk_.js"
     ]
   },
   "src/lib/i18n/locales/en.json": {
